Add non-native coverage tests and tighten code-review gates